# utokyo-FEN-EE3901E1-i3

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  main.py  pyproject.toml  ruff.toml  vcpkg.json
.github/workflows/: check.yml
PLC_KotaroTakagi/: LP.cpp  LPC.c
cli/src/: main.rs
hypha-cli/: Cargo.toml
hypha-cli/src/: main.rs
hypha-core/: Cargo.toml
hypha-core/src/: lib.rs
hypha-gui/: pyproject.toml
hypha-gui/src/hypha_gui/: main.py
hypha-lpc/: CMakeLists.txt  LPC.c
hypha-lpc-rs/: Cargo.toml
hypha-lpc-rs/src/: lib.rs
hypha-lpc-sys/: CMakeLists.txt  Cargo.toml  build.rs
hypha-lpc/include/hypha-lpc/: LPC.h  LPC.hpp
hypha-lpc/src/: LPC.cpp
hypha-plc/: LP.h
hypha-py/: Cargo.toml  pyproject.toml
hypha-py/src/: lib.rs
hypha-ring/: Cargo.toml
hypha-ring/src/: lib.rs
maturin-with-stub/: pyproject.toml
maturin-with-stub/src/maturin_with_stub/: __init__.py
opus-rs/: Cargo.toml
opus-rs/src/: lib.rs
opus-sys/: CMakeLists.txt  Cargo.toml
phone-py/src/: lib.rs
scripts/: compile_commands.nu  python-venv-overlay.nu  python_venv.nu  run_vcpkg.nu  stub_gen.nu
speex-rs/: Cargo.toml
speex-rs/src/: lib.rs
speex-sys/: CMakeLists.txt  Cargo.toml  build.rs
speex-sys/src/: lib.rs
src/: defer.rs  main.rs  render.rs  report.rs
