[workspace]
members = ["packages/cli"]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
bindgen = "0.72.0"
clap = "4.5.40"
cpal = "0.16.0"
crossbeam = "0.8.4"
dasp = "0.11.0"
iroh = "0.35.0"
rancor = "0.1.0"
rand = "0.8.5"
tokio = "1.45.1"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-error = "0.2.1"
tracing-subscriber = "0.3.19"
