[workspace]
members = ["hypha-cli", "hypha-core", "hypha-py", "opus-sys", "speex-sys"]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
bindgen = "0.72.0"
clap = "4.5.40"
cmake = "0.1.54"
cpal = "0.16.0"
crossbeam = "0.8.4"
dasp = "0.11.0"
iroh = "0.35.0"
pyo3 = "0.25.1"
pyo3-async-runtimes = "0.25.0"
pyo3-stub-gen = "0.10.0"
rancor = "0.1.0"
rand = "0.8.5"
tokio = "1.45.1"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
hypha-core = { path = "hypha-core" }
opus-sys = { path = "opus-sys" }
speex-sys = { path = "speex-sys" }
