[package]
name = "hypha-cli"
version = "0.4.0"
edition.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
iroh.workspace = true
rancor.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
hypha-core.workspace = true
