[package]
name = "hypha-core"
version = "0.0.0"
edition.workspace = true

[dependencies]
cpal.workspace = true
crossbeam.workspace = true
dasp = { workspace = true, features = ["signal"] }
iroh.workspace = true
rancor.workspace = true
rand.workspace = true
tokio.workspace = true
tracing.workspace = true
opus-rs.workspace = true
speex-sys = { workspace = true }
