[package]
name = "hypha-core"
version = "0.4.0"
edition.workspace = true

[dependencies]
cpal.workspace = true
crossbeam.workspace = true
dasp = { workspace = true, features = ["signal"] }
iroh = { workspace = true, features = ["discovery-local-network"] }
rancor.workspace = true
rand.workspace = true
tokio.workspace = true
tracing.workspace = true
opus-rs.workspace = true
speex-rs = { workspace = true }
