[package]
name = "hypha-py"
version = "0.4.0"
edition.workspace = true

[lib]
name = "hypha_py"
crate-type = ["cdylib", "rlib"]

[dependencies]
iroh.workspace = true
pyo3 = { workspace = true, features = ["abi3"] }
pyo3-async-runtimes = { workspace = true, features = ["tokio-runtime"] }
pyo3-stub-gen.workspace = true
tokio.workspace = true
tracing.workspace = true
rancor.workspace = true
hypha-core.workspace = true

[[bin]]
name = "stub_gen"
